--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 matplotlib ~= 3.8.4
 numpy ~= 1.26.4
 seaborn ~= 0.13.2
-opencv-python ~= 4.9.0.80
+opencv-python-headless ~= 4.9.0.80
 scikit-learn ~= 1.4.2
 streamlit ~=1.34.0
